adds patch and get all todos

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -49,9 +49,15 @@ button {
 }
 
 .todo-item {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  align-self: center;
+  display: grid;
+  grid-template-columns: 15% 1fr 15%;
+  grid-template-rows: 2.75rem;
+  align-items: baseline;
+  width: 60%;
+}
+
+.delete-btn {
   width: 60%;
 }
 
